--- a/content/post/2018-04-03-scrapping-and-analyzing-publisher-articles.Rmd
+++ b/content/post/2018-04-03-scrapping-and-analyzing-publisher-articles.Rmd
@@ -1,10 +1,10 @@
 ---
-title: Scrapping and analyzing 400.000 articles
-author: Manos Antoniou
-date: '2018-04-04'
-description: "[Apr 4, 2018] In this post i will analyze the articles published by NEWSBEAST.GR, 
+title: Scrapping and analyzing publisher articles
+author: ''
+date: '2018-04-03'
+description: "[Apr 3, 2018] In this post i will analyze the articles published by NEWSBEAST.GR, 
 one of the main on-line publishers in Greece."
-slug: scrapping-and-analyzing-400-000-articles
+slug: scrapping-and-analyzing-publisher-articles
 categories:
   - R
 tags:
