--- a/content/post/2018-04-05-web-scrapping-and-analyzing-400-000-articles.Rmd
+++ b/content/post/2018-04-05-web-scrapping-and-analyzing-400-000-articles.Rmd
@@ -1,10 +1,10 @@
 ---
-title: Scrapping and analyzing publisher articles
+title: Web scrapping and analyzing 400.000 articles
 author: ''
-date: '2018-04-03'
-description: "[Apr 3, 2018] In this post i will analyze the articles published by NEWSBEAST.GR, 
+date: '2018-04-05'
+description: "[Apr 5, 2018] In this post i will analyze the articles published by NEWSBEAST.GR, 
 one of the main on-line publishers in Greece."
-slug: scrapping-and-analyzing-publisher-articles
+slug: web-scrapping-and-analyzing-400-000-articles
 categories:
   - R
 tags:
