--- a/content/post/2017-12-28-build-a-letter-recognition-classifier.Rmd
+++ b/content/post/2017-12-28-build-a-letter-recognition-classifier.Rmd
@@ -1,10 +1,9 @@
 ---
-title: Building a letter recognition classifier
+title: Build a letter recognition classifier
 author: ''
-description: "[Dec 27, 2017] In this analysis i’ll develop a model that will predict the hand-written capital letters (english) displayed
+date: '2017-12-28'
+description: "[Dec 28, 2017] In this analysis i’ll develop a model that will predict the hand-written capital letters (english) displayed
 in a picture, using various of it's attributes"
-date: '2017-12-27'
-slug: building-a-letter-recognition-classifier
 categories:
   - R
 tags:
