--- a/content/post/2018-04-05-web-scrapping-and-analyzing-400-000-articles.Rmd
+++ b/content/post/2018-04-05-web-scrapping-and-analyzing-400-000-articles.Rmd
@@ -341,5 +341,5 @@ There are various outcomes from this analysis on Newsbeast.gr. In particular:
 * There is a minor "drop" in daily articles published each year during the Easter holidays
 
 
-[Full R code](https://github.com/mantoniou/blogdown/blob/master/content/post/2018-03-13-scrapping-and-analyzing-400-000-articles-from-newsbeast-gr.Rmd)
+[Full R code](https://raw.githubusercontent.com/mantoniou/Blog/master/content/post/2018-04-05-web-scrapping-and-analyzing-400-000-articles.Rmd)
 
