--- a/public/post/2017-12-28-build-a-letter-recognition-classifier.Rmd
+++ b/public/post/2017-12-28-build-a-letter-recognition-classifier.Rmd
@@ -2,8 +2,7 @@
 title: Build a letter recognition classifier
 author: ''
 date: '2017-12-28'
-description: "[Dec 28, 2017] In this analysis i’ll develop a model that will predict the hand-written capital letters (english) displayed
-in a picture, using various of it's attributes"
+description: "[Dec 28, 2017] Develop a model that will predict the hand-written capital letters (English) displayed in a picture"
 categories:
   - R
 tags:
@@ -13,7 +12,7 @@ tags:
   - SVD
 ---
 
-In this analysis i’ll develop a model that will predict the hand-written capital letters (english) displayed
+In this analysis i’ll develop a model that will predict the hand-written capital letters (English) displayed
 in a picture, using various of it's attributes.
 
 
@@ -70,7 +69,7 @@ original data.
 
 During the development of the prediction model, in order to predict the letter on 
 new observations, at first we've used all variables. Then we excluded some of the 4 
-correllated variables and finally we've used the variables created from the SVD 
+correlated variables and finally we've used the variables created from the SVD 
 algorithm instead of the original.
 
 Before we apply the hierarchical clustering, we created a data set with each
@@ -119,7 +118,7 @@ letter.cluster <- letter %>%
 
 # EXPLORATORY ANALYSIS
 
-In order to have an overview of the dataset's variability, i produced a box-plot
+In order to have an overview of the data-set's variability, i produced a box-plot
 matrix of all variables and each letter on the x-axis
 
 ```{r exploratory box-plot, echo=TRUE, fig.height=10, message=FALSE, warning=FALSE}
@@ -252,7 +251,7 @@ variables. SVD is an algebraic tool that has many potential uses such as:
 * Similarity computations/outlier detection
 * Rule mining, treatment of missing/wrong values
 
-Below i created a new dataset with the new svd variables and build a new model
+Below i created a new dataset with the new SVD variables and build a new model
 using k-NN algorithm.
 
 ```{r SVD, echo=TRUE, message=FALSE, warning=FALSE}
@@ -307,8 +306,8 @@ clusters. Cluster analysis or clustering is the task of grouping a set of object
 in such a way that objects in the same group (called a cluster) are more similar 
 (in some sense or another) to each other than to those in other groups (clusters).
 Finally i build a hierarchical clustering model in order to understand which 
-letters are "closer" to others and maybe missclasified. We applied it on the 
-pre-proccessed data set (letter.cluster). 
+letters are "closer" to others and maybe misclassified. We applied it on the 
+pre-processed data set (letter.cluster). 
 
 ```{r Clustering, echo=TRUE, message=FALSE, warning=FALSE}
 
@@ -325,7 +324,7 @@ clusters <- hclust(dist(letter.cluster))
 
 At the plot below you can
 see the hierarchical clustering output. When we compare these results with 
-the missclasification rates of the original model, it seems that for some letters
+the misclassification rates of the original model, it seems that for some letters
 like "B", "D", "F" it looks relevant. For other letters such "A", "C" don't match.
 
 
