--- a/content/post/2021-04-22-solve-a-real-world-churn-problem.Rmd
+++ b/content/post/2021-04-22-solve-a-real-world-churn-problem.Rmd
@@ -15,7 +15,7 @@ tags:
 ---
 
 
-Use R & Tidyverse to develop a churn management strategy
+Use R & Tidyverse to develop a churn management strategy..
 
 ### Churn definition
 
